(fix) hiding scrollbar when the menu is open in mobile devices

--- a/css/queriese.css
+++ b/css/queriese.css
@@ -160,11 +160,10 @@
     border-top: 1px solid rgb(221, 220, 220);
     z-index: 99999999999999;
   }
-  .show-mobile-nav {
-    height: 100%;
-    overflow-y: hidden;
+  html.show-mobile-nav {
+    overflow: hidden;
   }
-  .show-mobile-nav .responsive-nav {
+  html.show-mobile-nav .responsive-nav {
     transform: translateX(0);
   }
   .mobile-nav-list {
